<resources>
    <string name="app_name">SharpCirclesAndroidApp</string>
    <string name="logo_name">Sharp Circles</string>
    <string name="slogan_name">SEO Company</string>
    <string name="tagline_name">Online Course Learning App</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="steps">Steps</string>
    <string name="Step1"><p> Prove Ownership to Google \n
                          Gain acccess to Google Search data \n
                          Tool to use: \n
        Google Search Console</p></string>


    <string name="help">Help</string>
    <string name="Helpdetail"><p>If you would prefer us to contact you, please fill in and submit the form below, clearly indicating your contact information and requirements. We will be glad to hear from you and will contact you soon</p></string>

    <string name="aboutus"><b>About Us</b></string>
    <string name="aboutuscontent1"><p>Sharp Circles is a professional Australian digital marketing and SEO company based in Melbourne and Sydney. With more than 35 years experience in digital marketing and online business development, we specialise in full data driven analysis to develop target specific SEO solutions. \n \n We help: \n - Small and medium sized businesses to improve the performance of their websites \n - Achieve first page rankings in Google’s organic search results.</p></string>
    <string name="aboutuscontent2"> <b>How we work with you:</b> \n
Your SEO project is managed by professionals from the moment the order is placed, and throughout the duration of each campaign. From the outset, we work closely with you to understand your business and your customers’ needs. \n \n

        <b>Unfamiliar with SEO?</b> \n
You will easily see and understand the results process without any unnecessary complexity or confusion. SEO provides you with quantifiable and trackable results. You can regularly view ranking and traffic updates.

A full SEO analytics report can provide extensive customer data for sustained campaign planning. To ensure you’re kept informed every step of the way, we will: \n

* Set the right expectations and goals \n
* Plan an effective strategy \n
* Put the plan in place \n
* Closely monitor progress \n
* Provide clear and easy to understand performance reports</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>


    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything.  </string>


    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

</resources>